# python-swt

./: .editorconfig  .gitignore  .readthedocs.yml  LICENSE  README.md  SECURITY.md  fnox.toml  pyproject.toml
doc/source/: changelog.rst  conf.py  index.rst
src/swt/: __init__.py  __init__.py,cover
tests/: conftest.py  test_swt_rsa_sha256.py
tests/keys/: test-issuer-private.pem  test-issuer-public.pem
