[tool.poetry]
name = "swt"
version = "0.2.0"
description = "Simple Web Token library for Python"
authors = ["David Jack Wange Olrik <david@olrik.dk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/davidolrik/python-swt"
repository = "https://github.com/davidolrik/python-swt"
documentation = "https://python-swt.readthedocs.io/"
keywords = ["swt"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
]
packages = [
    { include = "swt", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7|^3.8"
pycryptodome = "^3.9.7"
poetry-version = "^0.1.5"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"
sphinx = "^3.0.4"
sphinx_rtd_theme = "^0.4.3"
towncrier = "^19.2.0"
black = {version = "^19.10b0", allow-prereleases = true}
pytest-black = "^0.3.10"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --cov-report=xml --black"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["swt"]

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError"
]

[tool.towncrier]
package = "swt"
# package_dir = "src"
directory = "newsfragments"
filename = "doc/source/changelog.rst"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
