[tool.poetry]
name = "swt"
version = "0.6.0"
description = "Simple Web Token library for Python"
authors = ["David Jack Wange Olrik <david@olrik.dk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/davidolrik/python-swt"
repository = "https://github.com/davidolrik/python-swt"
documentation = "https://python-swt.readthedocs.io/"
keywords = ["swt"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
]
packages = [
    { include = "swt", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
cryptography = "^46.0.5"
sphinx = {version = "^9.1.0", optional = true}
sphinx_rtd_theme = {version = "^3.1.0", optional = true}

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme"]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
coverage = {extras = ["toml"], version = "^7.13.4"}
pytest-cov = "^7.0.0"
sphinx = "^9.1.0"
sphinx_rtd_theme = "^3.1.0"
towncrier = "^25.8.0"
pytest-ruff = "^0.5"

[tool.pytest]
minversion = "9.0"
addopts = ["--cov", "--cov-report=xml", "--ruff", "--ruff-format"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["swt"]

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError"
]

[tool.towncrier]
package = "swt"
# package_dir = "src"
directory = "newsfragments"
filename = "doc/source/changelog.rst"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
